// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component crée un snapshot du composant Text 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
    ]
  }
>
  Snapshot Test
</Text>
`;

exports[`View Component crée un snapshot du composant View 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#000",
        },
        undefined,
      ]
    }
  >
    Inside View
  </Text>
</View>
`;
